# Document_Portal

./: .gitignore  README.md  app.py  pyproject.toml  read01.md  requirements.txt  setup_project.py  streamlit_ui.py  test.py
Excali_Draw/: ASCII.txt  Emailsummaryarch 1 (1).drawio  VQMS PLATFORM ARCHITECTURE.drawio  VQMS(High-Level).drawio  VQMS.excalidraw  VQMS02.drawio  VQMS03.drawio  new 3.txt  new 4.txt
Excali_Draw/Non_work/: vendor_email_automation_architecture.drawio  vqms.drawio  vqms2.drawio
Excali_Draw/dg/: VQMS_Dummy_Dataset.xlsx  vqms_final.drawio
config/: config.yaml
exception/: custom_exception.py
logger/: __init__.py  custom_logger.py
logging/: custom_logger.py
notebook/: experiments.ipynb
prompt/: prompt_library.py
src/document_analyzer/: __init__.py  data_analysis.py
src/document_chat/: __init__.py  retrieval.py
src/document_compare/: __init__.py  document_comparator.py
src/document_ingestion/: __init__.py  data_ingestion.py
static/: style.css
template/: index.html
utils/: config_loader.py  llm_utils.py  model_loader.py
